--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,8 @@
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
     "defs.h": "c",
-    "stdio.h": "c"
+    "stdio.h": "c",
+    "unistd.h": "c",
+    "fcntl.h": "c"
   }
 }
